--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorAccent">#F7C2BF</color>
+    <color name="colorPrimary">#E2FFCD</color>
+    <color name="colorPrimaryDark">#B6B4B3</color>
 </resources>
