--- a/app/src/main/res/layout/activity_find_users.xml
+++ b/app/src/main/res/layout/activity_find_users.xml
@@ -8,25 +8,33 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/white"
         android:orientation="horizontal">
         <EditText
-            android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="find users by email"
-            android:id="@+id/input" />
+            android:id="@+id/input"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:hint="find users"
+            android:paddingLeft="10sp"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/search"
-            android:text="Search"/>
+            android:text="search"/>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@android:color/black" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recyclerView">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:id="@+id/recyclerView"
+        android:scrollbars="vertical"/>
 
 </LinearLayout>
