--- a/app/src/main/res/layout/activity_choose_login_registration.xml
+++ b/app/src/main/res/layout/activity_choose_login_registration.xml
@@ -10,11 +10,11 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/btnLogin"
         android:id="@+id/login"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registration"
+        android:text="@string/btnRegister"
         android:id="@+id/registration"/>
 </LinearLayout>
