--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -7,7 +7,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="refresh"
+        android:text="@string/btnRefresh"
         android:id="@+id/refresh"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
