--- a/app/src/main/res/layout/activity_choose_receiver.xml
+++ b/app/src/main/res/layout/activity_choose_receiver.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Save to Story"
+                android:text="@string/tvEmail"
                 android:textSize="14dp"
                 />
             <View
