--- a/app/src/main/res/layout/recylerview_followers_item.xml
+++ b/app/src/main/res/layout/recylerview_followers_item.xml
@@ -36,7 +36,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="follow"
+                android:text="@string/btnFollow"
                 android:id="@+id/follow"/>
         </LinearLayout>
     </LinearLayout>
